compiler/weave_syntax/tests/data/syntax/declarations/object-init-0001.error
error: Expected '[token:identifier]'
        --> <source>:50:9
         |
      50 |         );
         |         ^
error: Expected '[token:identifier]'
        --> <source>:60:9
         |
      60 |         );
         |         ^
error: Expected '[token:identifier]'
        --> <source>:70:9
         |
      70 |         );
         |         ^
